# whisper-live

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/whisper_live/: audio_file.py  audio_source.py  audio_utils.py  cli.py  logging_utils.py  microphone.py  model.py  recorder.py  transcribe_utils.py
tests/: __init__.py  test_audio_source.py  test_microphone.py  test_recorder.py
